main.tf
resource "aws_vpc" "main" {
  cidr_block = var.cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support = var.enable_dns_support
  tags = merge (
    var.common_tags,
    {
        Project = var.project_name
    },
    var.vpc_tags
  )
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = merge (
    var.common_tags,
    var.ig_tags
  )
}

resource "aws_subnet" "public" {
  count = length (var.public_subnet_cidr)
  map_public_ip_on_launch = true
  vpc_id     = aws_vpc.main.id
  cidr_block = var.public_subnet_cidr[count.index]
  availability_zone = local.azs[count.index]
  tags = merge (
    var.common_tags,
    {
        Name = "${var.project_name}-public-${local.azs[count.index]}"
    }
  )
}

resource "aws_subnet" "private" {
  count = length (var.private_subnet_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidr[count.index]
  availability_zone = local.azs[count.index]
  tags = merge (
    var.common_tags,
    {
        Name ="${var.project_name}-private-${local.azs[count.index]}"
    }
  )
}

resource "aws_subnet" "database" {
  count = length (var.database_subnet_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.database_subnet_cidr[count.index]
  availability_zone = local.azs[count.index]
  tags = merge (
    var.common_tags,
    {
        Name ="${var.project_name}-db-${local.azs[count.index]}"
    }
  )
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = merge (
    var.common_tags,
    {
        Name = "${var.project_name}-public"
    }
  )
}

# NAT GATEWAY CREATION AND ELASTIC IP FOR THE PURPOSE OF INTERNET CONNECTION TO THE PRIVATE SUBNET

resource "aws_eip" "elastic_ip" {
  domain   = "vpc"
}

resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.elastic_ip.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge (
    var.common_tags,
    {
        Name ="${var.project_name}-ngw"
    }
  )


  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gw]
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }

  tags = merge (
    var.common_tags,
    {
        Name = "${var.project_name}-private"
    }
  )
}

resource "aws_route_table" "database" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }

  tags = merge (
    var.common_tags,
    {
        Name = "${var.project_name}-db"
    }
  )
}

resource "aws_route_table_association" "public_sa" {
  count = length(var.public_subnet_cidr)
  subnet_id      = element (aws_subnet.public[*].id, count.index)
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_sa" {
  count = length(var.private_subnet_cidr)
  subnet_id      = element (aws_subnet.private[*].id, count.index)
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "db_sa" {
  count = length(var.public_subnet_cidr)
  subnet_id      = element (aws_subnet.database[*].id, count.index)
  route_table_id = aws_route_table.database.id
}

resource "aws_db_subnet_group" "Roboshop" {
  name       = "main"
  subnet_ids = aws_subnet.database[*].id

  tags = merge (
    var.common_tags,
    {
        Name = var.project_name
    }
  )
}
